# cfd-js

./: .clang-format  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  README.md  cfdjs_util.d.ts  cfdjs_util.js  docker-compose.yml  index.d.ts  index.js  integration_elements_jest.config.js  integration_jest.config.js  jest.config.js  package-lock.json  package.json  pkg_getter.js  tsconfig.json  wally.js
addon/: CMakeLists.txt  cfdjs_node_addon.cpp  cfdjs_node_addon_init.cpp
src/: CMakeLists.txt  cfdapi_add_multisig_sign_json.h  cfdapi_add_sign_json.cpp  cfdapi_add_sign_json.h  cfdapi_blind_raw_transaction_json.cpp  cfdapi_blind_raw_transaction_json.h  cfdapi_calculate_ec_signature_json.h  cfdapi_convert_entropy_to_mnemonic_json.cpp  cfdapi_convert_entropy_to_mnemonic_json.h  cfdapi_convert_mnemonic_to_seed_json.cpp  cfdapi_convert_mnemonic_to_seed_json.h  cfdapi_create_address_json.cpp  cfdapi_create_address_json.h  cfdapi_create_extkey_from_parent_json.cpp  cfdapi_create_extkey_from_parent_json.h  cfdapi_create_extkey_from_path_json.cpp  cfdapi_create_extkey_from_path_json.h  cfdapi_create_extkey_from_seed_json.cpp  cfdapi_create_extkey_from_seed_json.h  cfdapi_create_extpubkey_json.cpp  cfdapi_create_extpubkey_json.h  cfdapi_create_key_pair_json.h  cfdapi_create_multisig_scriptsig_json.cpp  cfdapi_create_multisig_scriptsig_json.h  cfdapi_create_script_json.cpp  cfdapi_create_script_json.h  cfdapi_decode_transaction_json.h  cfdapi_elements_create_destroy_amount_json.h  cfdapi_elements_create_pegin_address_json.cpp  cfdapi_elements_create_pegin_address_json.h  cfdapi_elements_create_raw_pegin_json.cpp  cfdapi_elements_create_raw_pegin_json.h  cfdapi_elements_create_raw_pegout_json.cpp  cfdapi_elements_create_raw_pegout_json.h  cfdapi_elements_create_raw_transaction_json.h  cfdapi_elements_decode_raw_transaction_json.cpp  cfdapi_elements_decode_raw_transaction_json.h  cfdapi_elements_get_confidential_address_json.h  cfdapi_elements_get_unblinded_address_json.cpp  cfdapi_elements_get_unblinded_address_json.h  (+71 more)
src/autogen/: cfd_js_api_json_autogen.cpp  cfd_js_api_json_autogen.h  cfdapi_add_multisig_sign_json.cpp  cfdapi_add_multisig_sign_json.h  cfdapi_add_sign_json.h  cfdapi_blind_raw_transaction_json.h  cfdapi_calculate_ec_signature_json.cpp  cfdapi_calculate_ec_signature_json.h  cfdapi_convert_entropy_to_mnemonic_json.h  cfdapi_convert_mnemonic_to_seed_json.h  cfdapi_create_address_json.h  cfdapi_create_extkey_from_parent_json.h  cfdapi_create_extkey_from_path_json.h  cfdapi_create_extkey_from_seed_json.h  cfdapi_create_extpubkey_json.h  cfdapi_create_key_pair_json.cpp  cfdapi_create_key_pair_json.h  cfdapi_create_multisig_scriptsig_json.h  cfdapi_create_script_json.h  cfdapi_decode_transaction_json.cpp  cfdapi_decode_transaction_json.h  cfdapi_elements_create_destroy_amount_json.cpp  cfdapi_elements_create_destroy_amount_json.h  cfdapi_elements_create_pegin_address_json.h  cfdapi_elements_create_raw_pegin_json.h  cfdapi_elements_create_raw_pegout_json.cpp  cfdapi_elements_create_raw_pegout_json.h  cfdapi_elements_create_raw_transaction_json.cpp  cfdapi_elements_create_raw_transaction_json.h  cfdapi_elements_decode_raw_transaction_json.h  cfdapi_elements_get_confidential_address_json.cpp  cfdapi_elements_get_confidential_address_json.h  cfdapi_elements_get_unblinded_address_json.cpp  cfdapi_elements_get_unblinded_address_json.h  cfdapi_elements_set_rawissueasset_json.cpp  cfdapi_elements_set_rawissueasset_json.h  cfdapi_elements_set_rawreissueasset_json.h  cfdapi_elements_unblind_raw_transaction_json.h  cfdapi_encode_signature_by_der_json.h  cfdapi_error_base_json.h  (+31 more)
src/input_json_format/: README.md  cfdapi_add_multisig_sign.json  cfdapi_add_pubkey_hash_sign.json  cfdapi_add_raw_transaction.json  cfdapi_add_script_hash_sign.json  cfdapi_add_sign.json  cfdapi_append_descriptor_checksum.json  cfdapi_blind_raw_transaction.json  cfdapi_calculate_ec_signature.json  cfdapi_convert_aes.json  cfdapi_convert_entropy_to_mnemonic.json  cfdapi_convert_mnemonic_to_seed.json  cfdapi_create_address.json  cfdapi_create_descriptor.json  cfdapi_create_extkey.json  cfdapi_create_extkey_from_parent.json  cfdapi_create_extkey_from_parentkey.json  cfdapi_create_extkey_from_path.json  cfdapi_create_extkey_from_seed.json  cfdapi_create_extpubkey.json  cfdapi_create_key_pair.json  cfdapi_create_multisig_scriptsig.json  cfdapi_create_script.json  cfdapi_decode_base58.json  cfdapi_decode_der_signature_to_raw.json  cfdapi_decode_transaction.json  cfdapi_elements_add_raw_transaction.json  cfdapi_elements_create_destroy_amount.json  cfdapi_elements_create_pegin_address.json  cfdapi_elements_create_raw_pegin.json  cfdapi_elements_create_raw_pegout.json  cfdapi_elements_create_raw_transaction.json  cfdapi_elements_decode_raw_transaction.json  cfdapi_elements_get_confidential_address.json  cfdapi_elements_get_unblinded_address.json  cfdapi_elements_set_rawissueasset.json  cfdapi_elements_set_rawreissueasset.json  cfdapi_elements_unblind_raw_transaction.json  cfdapi_encode_base58.json  cfdapi_encode_signature_by_der.json  (+31 more)
wrap_js/: CMakeLists.txt  cfdjs_module.js  cfdjs_raw_module.js  cfdjs_util_example.js  cfdtest_node.cpp  elements_example.js  elements_pegin_example.js  example.js  example_helper.js  ts_example.ts  wally.js
wrap_js/__integration_test__/: bitcoin-docker-entrypoint.sh  bitcoin.conf  docker-entrypoint.sh  elements.conf  elements_wallettest.spec.ts  wallettest.spec.js
wrap_js/__test__/: .eslintrc.js  AddCETxSign.spec.js  AddMultisigSign.spec.js  AddPubkeyHashSign.spec.js  AddRawTransaction.spec.js  AddScriptHashSign.spec.js  AddSign.spec.js  AppendDescriptorChecksum.spec.js  BlindRawTransaction.spec.js  CalculateEcSignature.spec.js  ConvertAes.spec.js  ConvertEntropyToMnemonic.spec.js  ConvertMnemonicToSeed.spec.js  CreateAddress.spec.js  CreateCETxAddress.spec.js  CreateDescriptor.spec.js  CreateElementsSignatureHash.spec.js  CreateExtPubkey.spec.js  CreateExtkey.spec.js  CreateExtkeyFromParent.spec.js  CreateExtkeyFromPath.spec.js  CreateKeyPair.spec.js  (+67 more)
(+249 files in other folders)
